# skyclaw

./: Cargo.toml  README.md  SETUP_FOR_NEWBIE.md  SETUP_FOR_PROS.md
crates/skyclaw-agent/: Cargo.toml
crates/skyclaw-agent/src/: blueprint.rs  context.rs  lib.rs  llm_classifier.rs  runtime.rs
crates/skyclaw-agent/tests/: runtime_integration.rs
crates/skyclaw-channels/src/: discord.rs  lib.rs  slack.rs  telegram.rs
crates/skyclaw-core/src/traits/: channel.rs  memory.rs  mod.rs
crates/skyclaw-core/src/types/: config.rs
crates/skyclaw-gateway/: Cargo.toml
crates/skyclaw-gateway/src/: lib.rs  router.rs  setup_tokens.rs
crates/skyclaw-memory/src/: markdown.rs  sqlite.rs
crates/skyclaw-providers/src/: lib.rs  openai_compat.rs
crates/skyclaw-tools/: Cargo.toml
crates/skyclaw-tools/src/: browser.rs  key_manage.rs  lib.rs
docs/: OTK_SECURE_KEY_SETUP.md
docs/design/: BLUEPRINT_IMPLEMENTATION.md  BLUEPRINT_MATCHING_V2.md  BLUEPRINT_SYSTEM.md  COGNITIVE_ARCHITECTURE.md  INTERCEPTOR_PHASE1_REPORT.md
src/: main.rs
