[package]
name = "skyclaw-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Agent runtime for SkyClaw"

[dependencies]
skyclaw-core.workspace = true
skyclaw-vault.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
sqlx.workspace = true
base64.workspace = true
tokio-util.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
skyclaw-test-utils.workspace = true
async-trait.workspace = true
toml.workspace = true
tempfile = "3"
